2002-01-07  Dave Camp  <dave@ximian.com>

	* src/nautilus-theme-selector.c (theme_selector_finalize): Put
	back the accidentally removed g_free (theme_selector)->details.

2002-01-07  Dave Camp  <dave@ximian.com>

	* src/nautilus-preferences-dialog.c
	(preferences_dialog_populate_themes_group): Take out the return.
	The EelLabel exorcism did in fact mostly fix the theme selector.

	* src/nautilus-theme-selector.c (theme_selector_finalize): Moved here
	from theme_selector_destroy.
	(nautilus_theme_selector_class_init): Fixed the argument type list for
	the theme_changed signal, and reflect the destroy->finalize change.

2002-01-05  Michael Meeks  <michael@ximian.com>

	* configure.in (IMLIB_REQUIRED, GDK_PIXBUF_REQUIRED),
	(POPT_REQUIRED, GCONF_REQUIRED): prune

2002-01-04  Havoc Pennington  <hp@pobox.com>

	* libnautilus-private/nautilus-global-preferences.c
	(nautilus_global_preferences_init): add preload of the gconf
	cache, to hopefully avoid a zillion round trips to gconfd on
	startup.

	* test/test.c (test_window_new): remove weird gtk_window_set_policy

	* test/test-nautilus-preferences-display.c: remove user level
	stuff

	* test/test-nautilus-preferences-change.c: remove user level stuff

	* libnautilus-private/nautilus-global-preferences.c: the default 
	click policy was SPEED_TRADEOFF_LOCAL_ONLY, fix

	* libnautilus-private/nautilus.schemas: add schemas file, 
	incomplete, needs to be finished and installed

	* libnautilus-private/nautilus-global-preferences.c: strip out
	user levels

	* src/nautilus-shell-ui.xml: strip out user level menu

	* src/nautilus-window-menus.c: strip out user level menu

2002-01-04  Darin Adler  <darin@bentspoon.com>

	* libnautilus-private/nautilus-icon-container.c:
	(rubberband_timeout_callback): Fix rubberband selection when
	the icon view is scrolled by using the bin_window.
	
	* src/nautilus-sidebar.c: (nautilus_sidebar_destroy):
	Fix one of those "double-destroy" problems.

	* TODO: Formatting tweak.